--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -117,12 +117,19 @@
     </style>
 
     <style name="mainmenutext">
+        <item name="android:id">@+id/text</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">12sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="mainmenuimage">
+         <item name="android:id">@+id/image</item>        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
 </resources>
