--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -4,13 +4,16 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:paddingTop="2dp"
+       android:background="@color/menu_bg"
+    android:paddingBottom="2dp">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_centerVertical="true"
-        android:background="@color/menu_bg"
+     
         android:orientation="horizontal" >
 
         <LinearLayout
