--- a/oishii/OiSHii/res/layout/menu_item_header.xml
+++ b/oishii/OiSHii/res/layout/menu_item_header.xml
@@ -12,6 +12,7 @@
         style="@style/sploffers_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="5dp" />
 
@@ -20,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
+         android:gravity="center_vertical"
         android:layout_marginTop="5dp"
         android:textColor="@android:color/black" />
 
