--- a/oishii/OiSHii/res/layout/todays_menu_item_contents.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_contents.xml
@@ -66,7 +66,7 @@
                 android:text="@string/price"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:layout_marginLeft="3dp" />
+                android:layout_marginRight="3dp" />
 
             <TextView
                 android:id="@+id/price"
