--- a/oishii/OiSHii/res/layout/create_account.xml
+++ b/oishii/OiSHii/res/layout/create_account.xml
@@ -26,71 +26,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp" >
-
-                    <TextView
-                        style="@style/fieldLabel"
-                        android:text="@string/field_title" />
-
-                    <EditText
-                        android:id="@+id/field_Title"
-                        style="@style/fieldText" >
-
-                        <requestFocus />
-                    </EditText>
-                </LinearLayout>
-
-                <View style="@style/fieldSeparator" />
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp" >
-
-                    <TextView
-                        style="@style/fieldLabel"
-                        android:text="@string/field_first_name" />
-
-                    <EditText
-                        android:id="@+id/fld_FirstName"
-                        style="@style/fieldText" />
-                </LinearLayout>
-
-                <View style="@style/fieldSeparator" />
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp" >
-
-                    <TextView
-                        style="@style/fieldLabel"
-                        android:text="@string/field_last_name" />
-
-                    <EditText
-                        android:id="@+id/fld_LastName"
-                        style="@style/fieldText" />
-                </LinearLayout>
-
-                <View style="@style/fieldSeparator" />
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp" >
-
-                    <TextView
-                        style="@style/fieldLabel"
-                        android:text="@string/field_email" />
-
-                    <EditText
-                        android:id="@+id/fld_Email"
-                        style="@style/fieldText"
-                        android:inputType="textEmailAddress" />
-                </LinearLayout>
+                <include layout="@layout/mydetails" />
 
                 <View style="@style/fieldSeparator" />
 
