--- a/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
@@ -1,25 +1,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent"
-    android:background="@android:color/white"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
+    android:background="@android:color/white"
     android:orientation="vertical" >
 
+    <RelativeLayout
+        android:id="@+id/shadow_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/todays_bg" >
+
+        <!--
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+        -->
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true" >
+
+            <TextView
+                android:id="@+id/titleFirst"
+                style="@style/todaysmenu_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/titleSecond"
+                style="@style/todaysmenu_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </RelativeLayout>
+    
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/progress"
+        style="@android:style/Widget.ProgressBar.Inverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        style="@android:style/Widget.ProgressBar.Inverse"
-        android:layout_marginTop="15dp"
-         />
+        android:layout_marginTop="15dp" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/acc"
-		/>
+        android:layout_height="200dp" 
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/title"
@@ -28,16 +67,16 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="Large Text"
+        android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:textColor="#6D6D6D"
-        android:text="TextView" />
+        android:textColor="#404040" />
 
 </LinearLayout>
