--- a/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
@@ -14,6 +14,8 @@
             android:id="@+id/parent"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:layout_marginTop="30dp"
+            android:paddingTop="30dp"
             android:orientation="vertical" >
 
             <ProgressBar
