--- a/oishii/OiSHii/res/layout/header.xml
+++ b/oishii/OiSHii/res/layout/header.xml
@@ -17,19 +17,26 @@
             android:layout_height="fill_parent"
             android:layout_marginLeft="12dip"
             android:layout_marginRight="12dip"
-            android:gravity="center"
-            />
+            android:gravity="center" />
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/oshii_image"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true" 
             android:paddingRight="10dp"
-            android:visibility="gone"
-            />
+            android:src="@drawable/oshii_image"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/btnArbitary"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </RelativeLayout>
