--- a/oishii/OiSHii/res/layout/address_field.xml
+++ b/oishii/OiSHii/res/layout/address_field.xml
@@ -1,6 +1,40 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="wrap_content" >
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="8dp"
+            android:layout_toLeftOf="@+id/type"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_weight="75" />
+
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:textColor="#385487"
+            android:singleLine="true"
+            android:textSize="15sp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="25"
+            android:layout_gravity="center_vertical" />
+    </LinearLayout>
+
+    <View android:id="@+id/sep" style="@style/fieldSeparator" />
+
+</LinearLayout>
