--- a/oishii/OiSHii/res/layout/locations.xml
+++ b/oishii/OiSHii/res/layout/locations.xml
@@ -6,10 +6,27 @@
     android:layout_marginTop="8dp" >
 
     <LinearLayout
-        android:id="@+id/parent"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/stroke_border" 
-        android:orientation="vertical"/>
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/parent"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/stroke_border"
+            android:orientation="vertical" />
+
+        <TextView
+            android:id="@+id/noLocations"
+            style="@style/buttonShadow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_color"
+            android:text="@string/no_loc"
+            android:textSize="17sp" 
+            android:visibility="gone"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 
 </ScrollView>
