--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -3,17 +3,16 @@
     android:id="@+id/footer"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@color/menu_bg"
     android:gravity="center_vertical"
-    android:orientation="vertical" 
-    android:paddingTop="2dp"
-       android:background="@color/menu_bg"
-    android:paddingBottom="2dp">
+    android:orientation="vertical"
+    android:paddingBottom="2dp"
+    android:paddingTop="2dp" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_centerVertical="true"
-     
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -30,11 +29,11 @@
                 android:src="@drawable/home" />
 
             <TextView
-                 android:id="@+id/text"
+                android:id="@+id/text"
                 style="@style/mainmenutext"
                 android:text="@string/mnu_about" />
         </LinearLayout>
-		
+
         <LinearLayout
             android:id="@+id/offers"
             android:layout_width="wrap_content"
@@ -62,7 +61,6 @@
 
             <ImageView
                 style="@style/mainmenuimage"
-                
                 android:src="@drawable/clock" />
 
             <TextView
@@ -75,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:orientation="vertical" >
 
@@ -91,7 +90,6 @@
             android:id="@+id/basket"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_marginLeft="13dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="vertical" >
@@ -99,6 +97,7 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:layout_gravity="center_horizontal"
                 android:layout_weight="1" >
 
                 <LinearLayout
