--- a/oishii/OiSHii/res/layout/basket.xml
+++ b/oishii/OiSHii/res/layout/basket.xml
@@ -5,10 +5,11 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <LinearLayout
+            android:id="@+id/basketParent"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical" >
@@ -35,13 +36,13 @@
                 android:orientation="vertical" />
 
             <TextView
-                android:id="@+id/textView1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/text_color"
                 android:paddingBottom="5dp"
                 android:paddingLeft="8dp"
                 android:paddingTop="5dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/calcs"
                 android:textColor="@android:color/white"
                 android:textSize="15sp"
@@ -54,22 +55,36 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:orientation="vertical" />
-           <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/text_color" android:layout_marginTop="5dp"/>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/text_color" />
+
+            <Button
+                android:id="@+id/btnCheckout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/btn_checkout_selector"
+                android:text="@string/btn_gtocheck"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btnCheckout"
-            android:layout_width="fill_parent"
+        <TextView
+            android:id="@+id/emptyBasket"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/btn_checkout_selector"
-            android:text="@string/btn_gtocheck"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:text="@string/basket_noitems"
+            android:textColor="@android:color/black"
+            android:layout_gravity="center_horizontal" 
+            android:visibility="gone"/>
     </LinearLayout>
 
 </ScrollView>
