--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -121,7 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right|center_vertical"
-                    android:background="@drawable/price_tag"
+                    android:background="@drawable/price_tag_border"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
                     android:text="£ 30"
