--- a/oishii/OiSHii/res/drawable/price_tag_border.xml
+++ b/oishii/OiSHii/res/drawable/price_tag_border.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"  >
 
     <size
         android:height="10dp"
@@ -8,9 +8,10 @@
     <corners android:radius="5dp" />
 
     <gradient
-        android:startColor="#F1A2A6"
-        android:endColor="#DA0812"
-        android:angle="90"/>
+        
+        android:angle="90"
+        android:endColor="#F1A2A6"
+        android:startColor="#DA0812" />
 
     <stroke
         android:width="1dp"
