--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -124,9 +124,10 @@
                     android:background="@drawable/price_tag_border"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
+                    android:gravity="center_vertical"
                     android:text="£ 30"
                     android:textColor="@android:color/white"
-                    android:textSize="8sp"
+                    android:textSize="10sp"
                     android:textStyle="bold"
                     android:visibility="gone" />
             </FrameLayout>
