--- a/oishii/OiSHii/res/layout/history_child.xml
+++ b/oishii/OiSHii/res/layout/history_child.xml
@@ -30,8 +30,8 @@
                 android:id="@+id/itemNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:layout_marginLeft="5dp"
+                android:text="TextView"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -49,6 +49,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="10dp" >
