--- a/oishii/OiSHii/res/layout/basket_item.xml
+++ b/oishii/OiSHii/res/layout/basket_item.xml
@@ -2,8 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/item"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -11,10 +10,27 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/price"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="17sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/text_color"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:layout_marginRight="3dp" />
+
+        <TextView
+            android:id="@+id/item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/price"
