--- a/oishii/OiSHii/res/layout/history_child.xml
+++ b/oishii/OiSHii/res/layout/history_child.xml
@@ -21,7 +21,6 @@
                 android:id="@+id/itemCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textColor="@color/text_color"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -31,7 +30,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="TextView"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -42,7 +40,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="TextView"
             android:textColor="@color/text_color" />
     </RelativeLayout>
 
@@ -58,6 +55,7 @@
             android:id="@+id/items"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_alignParentLeft="true" />
 
         <ImageView
