--- a/oishii/OiSHii/res/layout/login.xml
+++ b/oishii/OiSHii/res/layout/login.xml
@@ -14,7 +14,8 @@
             android:scaleType="fitXY"
             android:src="@drawable/logo_top" />
 
-        <LinearLayout
+        <!--
+             <LinearLayout
             android:id="@+id/userPasswdLayout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -23,45 +24,54 @@
             android:layout_marginTop="15dip"
             android:background="@drawable/textbox_bkgd"
             android:gravity="center_vertical"
-            android:orientation="vertical" >
+            android:orientation="vertical" >
+        -->
 
-            <EditText
-                android:id="@+id/username_edit"
-                android:layout_width="fill_parent"
-                android:layout_height="45dip"
-                android:background="@android:color/white"
-                android:hint="@string/username"
-                android:inputType="textEmailAddress"
-                android:paddingLeft="10dp"
-                android:singleLine="true"
-                android:tag="Username"
-                android:textColor="@color/text_color"
-                android:textColorHint="@color/text_field_hint"
-                android:textSize="17dip"
-                android:textStyle="bold" />
+        <EditText
+            android:id="@+id/username_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_marginTop="15dip"
+            android:background="@drawable/stroke_border"
+            android:hint="@string/username"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
+            android:tag="Username"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_field_hint"
+            android:textSize="17dip"
+            android:textStyle="bold" />
 
-            <View
+        <!--
+                 <View
                 android:id="@+id/dividerLine"
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
-                android:background="#999999" />
+                android:background="#999999" />
+        -->
 
-            <EditText
-                android:id="@+id/password_edit"
-                android:layout_width="fill_parent"
-                android:layout_height="45dip"
-                android:background="@android:color/white"
-                android:hint="@string/password"
-                android:imeOptions="actionGo"
-                android:inputType="textPassword"
-                android:paddingLeft="10dp"
-                android:singleLine="true"
-                android:tag="Password"
-                android:textColor="@color/text_color"
-                android:textColorHint="@color/text_field_hint"
-                android:textSize="17dip"
-                android:textStyle="bold" />
-        </LinearLayout>
+        <EditText
+            android:id="@+id/password_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_marginTop="4dip"
+            android:background="@drawable/stroke_border"
+            android:hint="@string/password"
+            android:imeOptions="actionGo"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
+            android:tag="Password"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_field_hint"
+            android:textSize="17dip"
+            android:textStyle="bold" />
+        <!-- </LinearLayout> -->
 
         <Button
             android:id="@+id/login"
