--- a/oishii/OiSHii/res/layout/promo_code.xml
+++ b/oishii/OiSHii/res/layout/promo_code.xml
@@ -24,10 +24,11 @@
         <EditText
             android:id="@+id/editText1"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+             android:layout_height="45dip"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:ems="10"
+            android:paddingLeft="10dp"
             android:background="@drawable/stroke_border"
             android:hint="Promotional code"
             android:textColor="@color/text_color" >
@@ -47,7 +48,7 @@
             android:text="Apply promotional code" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnContinue"
             style="@style/primary_btn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
