--- a/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_detail.xml
@@ -54,7 +54,7 @@
             <Button
                 android:id="@+id/btnToBasket"
                 android:layout_width="fill_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
