--- a/oishii/OiSHii/res/layout/delivery_time.xml
+++ b/oishii/OiSHii/res/layout/delivery_time.xml
@@ -51,7 +51,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center_horizontal"
-                android:text="00:00"
+                android:text="--:--"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
