--- a/oishii/OiSHii/res/layout/add_to_basket_dailog.xml
+++ b/oishii/OiSHii/res/layout/add_to_basket_dailog.xml
@@ -1,19 +1,57 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" 
+    android:background="@drawable/bg">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:id="@+id/itemName"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:textColor="@android:color/black"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" 
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" 
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            
+            android:layout_marginRight="5dp"
+            android:background="@drawable/plus"
+          />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+        <EditText
+            android:layout_width="60dp"
+            android:background="@drawable/stroke_border"
+            android:layout_height="30dp"
+            android:inputType="number"
+             />
 
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/minus"
+            android:text="-" />
     </LinearLayout>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        style="@style/primary_btn"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/add_basket" />
+
+</LinearLayout>
