--- a/oishii/OiSHii/res/layout/todays_menu_item_contents.xml
+++ b/oishii/OiSHii/res/layout/todays_menu_item_contents.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_menu"
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="3dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:paddingBottom="3dp"
             android:paddingTop="3dp"
             android:layout_weight="20"
